@@ -2,6 +2,7 @@ New in version 1.5.1 (XXX 2014)
  * Extensive fixes for comparatives, from Rodas Solomon.
  * New TestRelEx.java adds more unit test cases.
  * Bugfix multi-language support.
+ * OpenCog server can now return multiple parses.
 
 New in version 1.5.0 (21 November 2013)
  * Minor cleanup of windows *.bat file, build and config files.
